# CapstoneProjectAgricultureChat

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth.py  chat.py  health.py  ingest.py  retrieval.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: chroma.py  mongo.py
app/db/repositories/: __init__.py  document.py  message.py  session.py  user.py
app/langchain_components/: chains.py  documents.py  embeddings.py  retrievers.py  splitters.py  vectorstore.py
app/prompts/: agriculture_assistant.py
app/schemas/: auth.py  chat.py  ingest.py  retrieval.py
app/services/: chat_service.py  chunking_service.py  embedding_service.py  ingest_service.py  llm_service.py  memory_service.py  processing_service.py  retrieval_service.py  scraping_service.py
app/utils/: ids.py  metadata.py  text.py
chroma_db/: chroma.sqlite3
docs/: CORE_FILES.md
frontend/: app.py  index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
scripts/: build_rag_db.py  ingest_offline_corpus.py  ingest_seed_data.py  reindex.py  run_api.py  snapshot_rag_db.py  sources.json
tests/: test_api.py  test_security.py
