[project]
name = "agri-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "motor>=3.7.1",
    "openrouter>=0.9.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=5.6.0",
    "pyspark>=3.5.7",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.47.0",
]
